Add more contributors

--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@ Type Erasure and Type Overwriting Mutation (<a href="tem_tom_bugs.html">report l
 <h3>Team</h3>
 <a href="https://theosotr.github.io/">Thodoris Sotiropoulos</a> <br>
 <a href="https://stefanoschaliasos.github.io/">Stefanos Chaliasos</a> <br>
-<a href="https://www.spinellis.gr/index.html.var">Diomidis Spinellis</a> <br>
+<a href="https://gdrosos.github.io/">Giorgos Drosos</a> <br>
+<a href="https://github.com/CHM1993">Charalambos Mitropoulos</a> <br>
 <a href="https://www.doc.ic.ac.uk/~livshits/">Benjamin Livshits</a> <br>
+<a href="https://www.spinellis.gr/index.html.var">Diomidis Spinellis</a> <br>
 <a href="https://dimitro.gr/">Dimitris Mitropoulos</a> <br>
 
 <h3>Publications</h3>
