Update reported bugs

--- a/tem_tom_bugs.html
+++ b/tem_tom_bugs.html
@@ -106,7 +106,9 @@ Parameterized class, Parameterized type, Variable arguments, Type argument infer
 <b>Status</b>:
 Open
 
-
+<br>
+<b>Resolution date</b>:
+2022-04-28
 <br>
 <b>Symptom</b>:
 Unexpected runtime behavior
