--- a/tom_bugs.html
+++ b/tom_bugs.html
@@ -16,12 +16,141 @@
 
 <h2>Bug findings with Type Overwriting Mutation</h2>
 
+<h3>Kotlin</h3>
+
+<ul>
+<li>
+<b>
+#1 Superfluous TYPE_MISMATCH when instantiating type constructor with bounded type parameters 
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://youtrack.jetbrains.com/issue/KT-47458">https://youtrack.jetbrains.com/issue/KT-47458</a>
+<br>
+<b>Date found</b>:
+2021-06-25
+<br>
+<b>Status</b>:
+Open
+
+
+<br>
+<b>Symptom</b>:
+Unexpected runtime behavior
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+class Foo<out Y, Z: Y>
+open class A
+class B : A()
+fun main() {
+    val x: Foo<A, in A> = Foo<B, B>()
+}
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Parameterized class, Declaration-site variance, Bounded type parameter, Use-site variance, Parameterized type, Inheritance
+
+<br>
+<br>
+</details>
+</li>
+<li>
+<b>
+#2 NI: Reporting misleading error message when initializing a type constructor with unresolved reference 
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://youtrack.jetbrains.com/issue/KT-47117">https://youtrack.jetbrains.com/issue/KT-47117</a>
+<br>
+<b>Date found</b>:
+2021-06-03
+<br>
+<b>Status</b>:
+Open
+
+
+<br>
+<b>Symptom</b>:
+Unexpected runtime behavior
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+class Foo<J>() {}
+class Bar<H, N>(val x: Foo<N>) {}
+fun foo(): Unit
+{
+  val y = Bar<Any, Any>(Foo<N>())
+}
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Parameterized class, Parameterized type
+
+<br>
+<br>
+</details>
+</li>
+<li>
+<b>
+#3 IllegalArgumentException: ClassicTypeSystemContext couldn't handle: Captured(out Number)  -- Fixed
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://youtrack.jetbrains.com/issue/KT-49101">https://youtrack.jetbrains.com/issue/KT-49101</a>
+<br>
+<b>Date found</b>:
+2021-10-06
+<br>
+<b>Status</b>:
+Closed
+<br>
+<b>Resolution</b>:
+Fixed
+<br>
+<b>Resolution date</b>:
+2021-10-20
+<br>
+<b>Symptom</b>:
+Crash
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+class A<T: B<out Number>>(val x: T) {
+    fun test() {
+      val y: Int = x.m<C<out Number>>()
+    }
+}
+class B<T1> {
+    fun <X1: C<T1>> m(): Int = 1
+}
+class C<T>
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Parameterized class, Bounded type parameter, Use-site variance, Parameterized type, Parameterized function, Type argument inference
+
+<br>
+<br>
+</details>
+</li>
+</ul>
+
 <h3>Groovy</h3>
 
 <ul>
 <li>
 <b>
-#1 Issue in subtyping leads to unsound results 
+#4 Issue in subtyping leads to unsound results 
 </b>
 
 <details>
@@ -74,7 +203,7 @@ Parameterized class, Bounded type parameter, Inheritance, Subtyping
 </li>
 <li>
 <b>
-#2 STC involves improper subtyping rules for parameterized types with wildcard types 
+#5 STC involves improper subtyping rules for parameterized types with wildcard types 
 </b>
 
 <details>
@@ -113,7 +242,7 @@ Parameterized class, Inheritance, Parameterized type, Use-site variance
 </li>
 <li>
 <b>
-#3 STC does not catch type error when assigning a type parameter to a variable of another type 
+#6 STC does not catch type error when assigning a type parameter to a variable of another type 
 </b>
 
 <details>
@@ -156,7 +285,7 @@ Parameterized function
 </li>
 <li>
 <b>
-#4 STC does not check the upper bounds of type parameters 
+#7 STC does not check the upper bounds of type parameters 
 </b>
 
 <details>
@@ -195,7 +324,7 @@ Parameterized class, Parameterized type, Bounded type parameter
 </li>
 <li>
 <b>
-#5 STC ignores declared type of variable 
+#8 STC ignores declared type of variable 
 </b>
 
 <details>
@@ -244,7 +373,7 @@ Subtyping
 </li>
 <li>
 <b>
-#6 STC misses type error when involving a variable with a char a declared type 
+#9 STC misses type error when involving a variable with a char a declared type 
 </b>
 
 <details>
@@ -282,7 +411,7 @@ Primitive type
 </li>
 <li>
 <b>
-#7 STC instantiates parameterized function with a wrong type leading to unsoundness  -- Fixed
+#10 STC instantiates parameterized function with a wrong type leading to unsoundness  -- Fixed
 </b>
 
 <details>
@@ -326,7 +455,7 @@ Parameterized function, Type argument inference
 </li>
 <li>
 <b>
-#8 STC fails to catch type error on the return type of lambdas  -- Fixed
+#11 STC fails to catch type error on the return type of lambdas  -- Fixed
 </b>
 
 <details>
@@ -373,7 +502,7 @@ Lambda, Function type
 </li>
 <li>
 <b>
-#9 STC infers a type that does not respect the bound of type variable 
+#12 STC infers a type that does not respect the bound of type variable 
 </b>
 
 <details>
@@ -439,7 +568,7 @@ Parameterized class, Parameterized function, Bounded type parameter, Type argume
 </li>
 <li>
 <b>
-#10 Misleading report when using as a type argument a type parameter that extends an array type 
+#13 Misleading report when using as a type argument a type parameter that extends an array type 
 </b>
 
 <details>
@@ -476,7 +605,7 @@ Parameterized class, Bounded type parameter, Inheritance, Array, Parameterized t
 </li>
 <li>
 <b>
-#11 STC misses type check in Generic class with a bounded type parameter 
+#14 STC misses type check in Generic class with a bounded type parameter 
 </b>
 
 <details>
@@ -524,7 +653,7 @@ Parameterized class, Parameterized type, Inheritance, Bounded type parameter
 </li>
 <li>
 <b>
-#12 STC: accepts incorrect program with flow typing 
+#15 STC: accepts incorrect program with flow typing 
 </b>
 
 <details>
@@ -536,9 +665,13 @@ Parameterized class, Parameterized type, Inheritance, Bounded type parameter
 2021-05-19
 <br>
 <b>Status</b>:
-Open
-
-
+Closed
+<br>
+<b>Resolution</b>:
+Duplicate
+<br>
+<b>Resolution date</b>:
+2022-07-11
 <br>
 <b>Symptom</b>:
 Unexpected runtime behavior
@@ -574,7 +707,7 @@ Flow typing, Subtyping, Conditionals, Inheritance
 </li>
 <li>
 <b>
-#13 Wrong LUB when involving a numeric constant and null 
+#16 Wrong LUB when involving a numeric constant and null 
 </b>
 
 <details>
@@ -616,7 +749,7 @@ Conditionals, Primitive type
 </li>
 <li>
 <b>
-#14 STC misses type checks on default arguments  -- Fixed
+#17 STC misses type checks on default arguments  -- Fixed
 </b>
 
 <details>
@@ -671,7 +804,7 @@ Named arguments
 </li>
 <li>
 <b>
-#15 Compiler crash when trying to cast a boolean to float variable  -- Fixed
+#18 Compiler crash when trying to cast a boolean to float variable  -- Fixed
 </b>
 
 <details>
@@ -683,7 +816,7 @@ Named arguments
 2021-05-17
 <br>
 <b>Status</b>:
-Resolved
+Closed
 <br>
 <b>Resolution</b>:
 Fixed
@@ -714,7 +847,7 @@ Primitive type
 </li>
 <li>
 <b>
-#16 Type checking of array initializer expressions  -- Fixed
+#19 Type checking of array initializer expressions  -- Fixed
 </b>
 
 <details>
@@ -765,7 +898,7 @@ Array
 </li>
 <li>
 <b>
-#17 CLONE - STC does not report type mismatches for coerced list expression 
+#20 CLONE - STC does not report type mismatches for coerced list expression 
 </b>
 
 <details>
@@ -804,7 +937,7 @@ Array, Cast
 </li>
 <li>
 <b>
-#18 STC does not report type mismatches in array initializers  -- Fixed
+#21 STC does not report type mismatches in array initializers  -- Fixed
 </b>
 
 <details>
@@ -858,7 +991,7 @@ Array
 </li>
 <li>
 <b>
-#19 STC fails to report missing constructor 
+#22 STC fails to report missing constructor 
 </b>
 
 <details>
@@ -903,7 +1036,7 @@ Inheritance
 </li>
 <li>
 <b>
-#20 STC does not correctly type check variable whose type is a type variable 
+#23 STC does not correctly type check variable whose type is a type variable 
 </b>
 
 <details>
@@ -952,7 +1085,7 @@ Parameterized class, Parameterized type
 </li>
 <li>
 <b>
-#21 internal compiler error during instruction selection 
+#24 internal compiler error during instruction selection 
 </b>
 
 <details>
@@ -982,135 +1115,6 @@ class Foo {
 </xmp>
 </pre>
 
-
-<br>
-<br>
-</details>
-</li>
-</ul>
-
-<h3>Kotlin</h3>
-
-<ul>
-<li>
-<b>
-#22 Superfluous TYPE_MISMATCH when instantiating type constructor with bounded type parameters 
-</b>
-
-<details>
-<br>
-<b>Link</b>:
-<a href="https://youtrack.jetbrains.com/issue/KT-47458">https://youtrack.jetbrains.com/issue/KT-47458</a>
-<br>
-<b>Date found</b>:
-2021-06-25
-<br>
-<b>Status</b>:
-Open
-
-
-<br>
-<b>Symptom</b>:
-Unexpected runtime behavior
-<br>
-<b>Test case</b>:
-<pre>
-<xmp>
-class Foo<out Y, Z: Y>
-open class A
-class B : A()
-fun main() {
-    val x: Foo<A, in A> = Foo<B, B>()
-}
-</xmp>
-</pre>
-<b>Test Case Characteristics</b>:
-Parameterized class, Declaration-site variance, Bounded type parameter, Use-site variance, Parameterized type, Inheritance
-
-<br>
-<br>
-</details>
-</li>
-<li>
-<b>
-#23 NI: Reporting misleading error message when initializing a type constructor with unresolved reference 
-</b>
-
-<details>
-<br>
-<b>Link</b>:
-<a href="https://youtrack.jetbrains.com/issue/KT-47117">https://youtrack.jetbrains.com/issue/KT-47117</a>
-<br>
-<b>Date found</b>:
-2021-06-03
-<br>
-<b>Status</b>:
-Open
-
-
-<br>
-<b>Symptom</b>:
-Unexpected runtime behavior
-<br>
-<b>Test case</b>:
-<pre>
-<xmp>
-class Foo<J>() {}
-class Bar<H, N>(val x: Foo<N>) {}
-fun foo(): Unit
-{
-  val y = Bar<Any, Any>(Foo<N>())
-}
-</xmp>
-</pre>
-<b>Test Case Characteristics</b>:
-Parameterized class, Parameterized type
-
-<br>
-<br>
-</details>
-</li>
-<li>
-<b>
-#24 IllegalArgumentException: ClassicTypeSystemContext couldn't handle: Captured(out Number)  -- Fixed
-</b>
-
-<details>
-<br>
-<b>Link</b>:
-<a href="https://youtrack.jetbrains.com/issue/KT-49101">https://youtrack.jetbrains.com/issue/KT-49101</a>
-<br>
-<b>Date found</b>:
-2021-10-06
-<br>
-<b>Status</b>:
-Closed
-<br>
-<b>Resolution</b>:
-Fixed
-<br>
-<b>Resolution date</b>:
-2021-10-20
-<br>
-<b>Symptom</b>:
-Crash
-<br>
-<b>Test case</b>:
-<pre>
-<xmp>
-class A<T: B<out Number>>(val x: T) {
-    fun test() {
-      val y: Int = x.m<C<out Number>>()
-    }
-}
-class B<T1> {
-    fun <X1: C<T1>> m(): Int = 1
-}
-class C<T>
-</xmp>
-</pre>
-<b>Test Case Characteristics</b>:
-Parameterized class, Bounded type parameter, Use-site variance, Parameterized type, Parameterized function, Type argument inference
 
 <br>
 <br>
