--- a/tem_tom_bugs.html
+++ b/tem_tom_bugs.html
@@ -127,7 +127,7 @@ public class Main {
 </xmp>
 </pre>
 <b>Test Case Characteristics</b>:
-Parameterized class, Parameterized type, Variable arguments, Type argument inference
+Parameterized class, Parameterized type, Variable argument, Type argument inference
 <br>
 <b>Fix Commit(s)</b>:
 <ul>
