--- a/index.html
+++ b/index.html
@@ -20,88 +20,51 @@
 
 <h2>Project Hephaestus for Compiler Testing</h2>
 
-Hephaestus is a testing framework for validating static typing procedures
-in compilers. This is done by a combination of
-program generation and transformation-based compiler testing.
-Currently, Hephaestus has been used to test the type checkers of
-three popular programming languages: 
-<i>Java</i>, 
-<i>Kotlin</i>, 
-and <i>Groovy</i>.
-Hephaustus has revealed 178 (113 fixed) bugs.
+Hephaestus is a project for validating static typing procedures
+in compilers. As part of this project,
+we have developed numerous techniques to stress-test the
+implementation of type checkers in popular programming languages,
+such as  <i>Java</i>,  <i>Kotlin</i>, <i>Groovy</i>,
+and <i>Scala</i>.
+At the high level,
+our techniques generate type-intensive programs by
+either producing complex definitions from scratch or
+by combining synthetic code with application programming interfaces (APIs)
+from existing software libraries.
+To validate diverse aspects of static typing procedures
+(i.e., soundness, precision
+of type inference),
+we also enrich our approaches with fault-injection
+and semantics-preserving
+modes, along with their corresponding test oracles.
+
+
+<p><b>Tools</b>: <a href="https://github.com/hephaestus-compiler-project">https://github.com/hephaestus-compiler-project</a></p>
+
+
+<h3>Results</h3>
+
+Bugs found in compilers:
 
 <p>
-
-Hephaestus' <i>program generation</i> comes with three
-important characteristics.
-First, it produces <b>semantically valid</b> programs;
-rejecting a well-formed program produced by our
-generator indicates a potential compiler bug
-(test oracle).
-Second,
-the resulting programs rely heavily on
-parametric polymorphism
-(e.g., use of parameterized classes / functions,
-etc.)
-Third,
-to test compilers of different languages
-our generator yields programs at a higher-level of abstraction,
-and then uses translation mechanisms to
-convert the "abstract" programs into the target language.
-Currently, our generator produces programs written in
-three popular programming languages,
-namely, Java, Kotlin, and Groovy.
-
-</p>
-
-<p>
-
-Beyond program generation,
-Hephaestus also supports <i>transformation-based</i> compiler testing
-by introducing two mutations,
-<b>type erasure mutation</b> and <b>type overwriting mutation</b>.
-Their goal is to exercise compilers' type inference algorithms
-and other type-related operations.
-Given an input program <code>P</code>,
-the type erasure mutation removes declared types from variables and parameters,
-or type arguments from parameterized constructor and method calls,
-while preserving the well-formedness of <code>P</code>.
-The type overwriting mutation adopts a fault-injecting approach,
-and introduces a type error in <code>P</code>
-by replacing a type <code>t1</code> 
-with another incompatible type <code>t2</code>.
-The type overwriting mutation updates the test oracle,
-as compiling a program obtained from this mutation
-indicates a potential soundness bug in the compiler under test.
-
-</p>
-
-<p>
-
-Bugs found in compilers by hephaestus:
-
-<p>
-Summary: <b>178</b> (total) / <b>113</b> (fixed)<br>
+Summary: <b>262</b> (total) / <b>135</b> (fixed)<br>
 <ul>
-<li>Groovy bugs: <b>134</b> (total) / <b>101</b> (fixed)</li>
-<li>Kotlin bugs: <b>33</b> (total) / <b>10</b> (fixed)</li>
+<li>Groovy bugs: <b>196</b> (total) / <b>121</b> (fixed)</li>
+<li>Kotlin bugs: <b>44</b> (total) / <b>11</b> (fixed)</li>
 <li>Java bugs: <b>11</b> (total) / <b>2</b> (fixed)</li>
-<li>Program Generator: <b>90</b> (total)</li>
-<li>Type Erasure Mutation: <b>61</b> (total)</li>
-<li>Type Overwriting Mutation: <b>25</b> (total)</li>
-<li>Type Erasure and Type Overwriting Mutation: <b>2</b> (total)</li>
-<li>Unexpected Compile Time Error bugs: <b>122</b> (total)</li>
-<li>Undefined Runtime Behavior bugs: <b>23</b> (total)</li>
-<li>Crash bugs: <b>33</b> (total)</li>
+<li>Scala bugs: <b>11</b> (total) / <b>1</b> (fixed)</li>
+<li>Unexpected Compile Time Error bugs: <b>183</b> (total)</li>
+<li>Unexpected Runtime Behavior bugs: <b>29</b> (total)</li>
+<li>Crash bugs: <b>48</b> (total)</li>
+<li>Compilation Performance Issue bugs: <b>2</b> (total)</li>
 </ul>
 </p>
-Program Generator (<a href="hephaestus_bugs.html">report links</a>) <br>
-Type Erasure Mutation (<a href="tem_bugs.html">report links</a>) <br>
-Type Overwriting Mutation (<a href="tom_bugs.html">report links</a>) </br>
-Type Erasure and Type Overwriting Mutation (<a href="tem_tom_bugs.html">report links</a>)
+Well-typed programs (w/o type erasure) (<a href="hephaestus_bugs.html">report links</a>) <br>
+Well-typed programs (w/ type erasure) (<a href="tem_bugs.html">report links</a>) <br>
+Ill-typed programs (w/o type erasure) (<a href="tom_bugs.html">report links</a>) </br>
+Ill-typed programs (w/ type erasure) (<a href="tem_tom_bugs.html">report links</a>)
 </p>
 
-<p><b>hephaestus Tool</b>: <a href="https://github.com/hephaestus-compiler-project/hephaestus">https://github.com/hephaestus-compiler-project/hephaestus</a></p>
 
 <h3>Team</h3>
 <a href="https://theosotr.github.io/">Thodoris Sotiropoulos</a> <br>
@@ -111,10 +74,17 @@ Type Erasure and Type Overwriting Mutation (<a href="tem_tom_bugs.html">report l
 <a href="https://www.doc.ic.ac.uk/~livshits/">Benjamin Livshits</a> <br>
 <a href="https://www.spinellis.gr/index.html.var">Diomidis Spinellis</a> <br>
 <a href="https://dimitro.gr/">Dimitris Mitropoulos</a> <br>
+<a href="https://people.inf.ethz.ch/suz/">Zhendong Su</a> <br>
 
 <h3>Publications</h3>
+  [1] <a href="https://theosotr.github.io/assets/pdf/popl24.pdf">
+  <B>API-driven Program Synthesis for Testing Static Typing Implementations</B></a>. 
+  [<a href="https://github.com/hephaestus-compiler-project/thalia-popl-eval">artifact</a>] <br>
+Thodoris Sotiropoulos, Stefanos Chaliasos, Zhendong Su. </br> 
+In <a href="https://popl24.sigplan.org/"><I>Proceedings of POPL 2024</I></a>, London, UK, January 2024. </br>
+<br>
 
-  [1] <a href="https://theosotr.github.io/assets/pdf/pldi22.pdf">
+  [2] <a href="https://dl.acm.org/doi/10.1145/3519939.3523427">
   <B>Finding Typing Compiler Bugs</B></a>. 
   [<a href="https://github.com/hephaestus-compiler-project/hephaestus-pldi-eval">artifact</a>] <br>
 Stefanos Chaliasos<sup>*</sup>, Thodoris Sotiropoulos<sup>*</sup>, Diomidis Spinellis, Arthur Gervais, Benjamin Livshits, and Dimitris Mitropoulos. </br> 
@@ -123,8 +93,9 @@ In <a href="https://conf.researchr.org/home/pldi-2022"><I>Proceedings of PLDI 20
   Both authors contributed equally to this work.
 </div>
 <br>
+<br>
 
-  [2] <a href="https://dl.acm.org/doi/pdf/10.1145/3485500">
+  [3] <a href="https://dl.acm.org/doi/pdf/10.1145/3485500">
   <B>Well-Typed Programs Can Go Wrong: A Study of Typing-Related Bugs in JVM Compilers</B></a>. 
   [<a href="https://github.com/hephaestus-compiler-project/types-bug-study-artifact">artifact</a>] <br>
 Stefanos Chaliasos<sup>*</sup>, Thodoris Sotiropoulos<sup>*</sup>, Georgios-Petros Drosos, Charalambos Mitropoulos, Dimitris Mitropoulos, and Diomidis Spinellis. </br> 
@@ -135,6 +106,6 @@ In <a href="https://2021.splashcon.org/track/splash-2021-oopsla"><I>Proceedings 
 
 <br><br>
 
-<tt>last modified: 2022-11-11</tt>
+<tt>last modified: 2023-11-09</tt>
 </body>
 </html>
