--- a/tom_bugs.html
+++ b/tom_bugs.html
@@ -16,21 +16,21 @@
 
 <h2>Bug findings with Type Overwriting Mutation</h2>
 
-<h3>Kotlin</h3>
+<h3>Groovy</h3>
 
 <ul>
 <li>
 <b>
-#1 Superfluous TYPE_MISMATCH when instantiating type constructor with bounded type parameters 
+#1 Miss to check the compatibility of wildcard types 
 </b>
 
 <details>
 <br>
 <b>Link</b>:
-<a href="https://youtrack.jetbrains.com/issue/KT-47458">https://youtrack.jetbrains.com/issue/KT-47458</a>
+<a href="https://issues.apache.org/jira/browse/GROOVY-11115">https://issues.apache.org/jira/browse/GROOVY-11115</a>
 <br>
 <b>Date found</b>:
-2021-06-25
+2023-06-28
 <br>
 <b>Status</b>:
 Open
@@ -43,16 +43,19 @@ Unexpected runtime behavior
 <b>Test case</b>:
 <pre>
 <xmp>
-class Foo<out Y, Z: Y>
-open class A
-class B : A()
-fun main() {
-    val x: Foo<A, in A> = Foo<B, B>()
+import java.util.*
+class Main {
+  static final void test() {
+    List<? extends Number> list = new LinkedList<Number>();
+    List<Number> x = list; // types are not compatible.
+    List<Number> y = (List<? extends Object>) null // types are not compatible;
+    list.add(1); // method call is not permitted.
+  }
 }
 </xmp>
 </pre>
 <b>Test Case Characteristics</b>:
-Parameterized class, Declaration-site variance, Bounded type parameter, Use-site variance, Parameterized type, Inheritance
+Parameterized type, Parameterized class, Wildcard type
 
 <br>
 <br>
@@ -60,16 +63,16 @@ Parameterized class, Declaration-site variance, Bounded type parameter, Use-site
 </li>
 <li>
 <b>
-#2 NI: Reporting misleading error message when initializing a type constructor with unresolved reference 
+#2 Failed to detect an ambiguous method call? 
 </b>
 
 <details>
 <br>
 <b>Link</b>:
-<a href="https://youtrack.jetbrains.com/issue/KT-47117">https://youtrack.jetbrains.com/issue/KT-47117</a>
+<a href="https://issues.apache.org/jira/browse/GROOVY-11106">https://issues.apache.org/jira/browse/GROOVY-11106</a>
 <br>
 <b>Date found</b>:
-2021-06-03
+2023-06-20
 <br>
 <b>Status</b>:
 Open
@@ -82,16 +85,20 @@ Unexpected runtime behavior
 <b>Test case</b>:
 <pre>
 <xmp>
-class Foo<J>() {}
-class Bar<H, N>(val x: Foo<N>) {}
-fun foo(): Unit
-{
-  val y = Bar<Any, Any>(Foo<N>())
+import java.io.*;
+import java.util.*;
+class Main {
+  void test() {
+    ObjectOutputStream y = null;
+    m(y); 
+  }
+  Number m(OutputStream x) { return 1; }
+  Number m(DataOutput x) { return 2; }
 }
 </xmp>
 </pre>
 <b>Test Case Characteristics</b>:
-Parameterized class, Parameterized type
+Overloading, Inheritance / Implementation of multiple interfaces, Subtyping
 
 <br>
 <br>
@@ -99,16 +106,94 @@ Parameterized class, Parameterized type
 </li>
 <li>
 <b>
-#3 IllegalArgumentException: ClassicTypeSystemContext couldn't handle: Captured(out Number)  -- Fixed
+#3 Exponential behaviour in error reporting 
 </b>
 
 <details>
 <br>
 <b>Link</b>:
-<a href="https://youtrack.jetbrains.com/issue/KT-49101">https://youtrack.jetbrains.com/issue/KT-49101</a>
+<a href="https://issues.apache.org/jira/browse/GROOVY-11081">https://issues.apache.org/jira/browse/GROOVY-11081</a>
 <br>
 <b>Date found</b>:
-2021-10-06
+2023-06-06
+<br>
+<b>Status</b>:
+Open
+
+
+<br>
+<b>Symptom</b>:
+Compilation performance issue
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+class Main {
+  static final void test() {
+    org.apache.commons.collections4.iterators.ZippingIterator<
+      org.apache.commons.collections4.iterators.ZippingIterator<String>
+    > x = null;
+  }
+}
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Parameterized type, Parameterized class
+
+<br>
+<br>
+</details>
+</li>
+<li>
+<b>
+#4 Fail to catch incompatible return type of lambdas 
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://issues.apache.org/jira/browse/GROOVY-11047">https://issues.apache.org/jira/browse/GROOVY-11047</a>
+<br>
+<b>Date found</b>:
+2023-05-05
+<br>
+<b>Status</b>:
+Open
+
+
+<br>
+<b>Symptom</b>:
+Unexpected runtime behavior
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+class Main {
+  static final void test() {
+        java.util.stream.StreamSupport.<Process>stream(()-> 1, 1, false); // Error, the return type of lamba is not compatible with the expected type.
+  }
+}
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Single Abstract Method (SAM), Parameterized function, Lambda
+
+<br>
+<br>
+</details>
+</li>
+<li>
+<b>
+#5 StackOverflowError in cyclic interface inheritance  -- Fixed
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://issues.apache.org/jira/browse/GROOVY-11036">https://issues.apache.org/jira/browse/GROOVY-11036</a>
+<br>
+<b>Date found</b>:
+2023-04-28
 <br>
 <b>Status</b>:
 Closed
@@ -117,7 +202,7 @@ Closed
 Fixed
 <br>
 <b>Resolution date</b>:
-2021-10-20
+2023-05-01
 <br>
 <b>Symptom</b>:
 Crash
@@ -125,32 +210,191 @@ Crash
 <b>Test case</b>:
 <pre>
 <xmp>
-class A<T: B<out Number>>(val x: T) {
-    fun test() {
-      val y: Int = x.m<C<out Number>>()
-    }
-}
-class B<T1> {
-    fun <X1: C<T1>> m(): Int = 1
-}
-class C<T>
+interface Bar {}
+interface Foo extends Foo, Bar {}
 </xmp>
 </pre>
 <b>Test Case Characteristics</b>:
-Parameterized class, Bounded type parameter, Use-site variance, Parameterized type, Parameterized function, Type argument inference
+Inheritance / Implementation of multiple interfaces
 
 <br>
 <br>
 </details>
 </li>
-</ul>
-
-<h3>Groovy</h3>
-
-<ul>
 <li>
 <b>
-#4 Issue in subtyping leads to unsound results 
+#6 Not reporting cyclic dependency in function's type parameters 
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://issues.apache.org/jira/browse/GROOVY-10998">https://issues.apache.org/jira/browse/GROOVY-10998</a>
+<br>
+<b>Date found</b>:
+2023-03-31
+<br>
+<b>Status</b>:
+Open
+
+
+<br>
+<b>Symptom</b>:
+Crash
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+class Test {
+  static <T extends T> void test() {}
+}
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Parameterized function
+
+<br>
+<br>
+</details>
+</li>
+<li>
+<b>
+#7 STC does not catch the type error when a generic is instantiated with bounded type parameter 
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://issues.apache.org/jira/browse/GROOVY-10977">https://issues.apache.org/jira/browse/GROOVY-10977</a>
+<br>
+<b>Date found</b>:
+2023-03-17
+<br>
+<b>Status</b>:
+Open
+
+
+<br>
+<b>Symptom</b>:
+Unexpected runtime behavior
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+import java.util.*;
+public class Test {
+    public static <T extends Number> void test() {
+      List<T> d = null;
+      d.add(false);
+    }
+}
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Overloading, Parameterized type, Parameterized class, Bounded type parameter
+
+<br>
+<br>
+</details>
+</li>
+<li>
+<b>
+#8 Issue in resolving overloaded method reference  -- Fixed
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://issues.apache.org/jira/browse/GROOVY-10972">https://issues.apache.org/jira/browse/GROOVY-10972</a>
+<br>
+<b>Date found</b>:
+2023-03-09
+<br>
+<b>Status</b>:
+Closed
+<br>
+<b>Resolution</b>:
+Fixed
+<br>
+<b>Resolution date</b>:
+2023-04-19
+<br>
+<b>Symptom</b>:
+Unexpected runtime behavior
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+import java.util.function.Function;
+import java.util.LinkedList;
+class Foo {}
+class Test {
+    public static void main(String[] args) {
+        LinkedList<Foo> x = new LinkedList();
+        x.add(new Foo());
+        Function<Integer, Foo> z = x::remove;
+        Foo k = z.apply(0); // ClassCastException boolean cannot be cast to Foo.
+    }
+}
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Overloading, Parameterized type, Parameterized class, Function reference, Single Abstract Method (SAM)
+
+<br>
+<br>
+</details>
+</li>
+<li>
+<b>
+#9 STC accepts program although constructor reference is invalid  -- Fixed
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://issues.apache.org/jira/browse/GROOVY-10930">https://issues.apache.org/jira/browse/GROOVY-10930</a>
+<br>
+<b>Date found</b>:
+2023-02-10
+<br>
+<b>Status</b>:
+Closed
+<br>
+<b>Resolution</b>:
+Fixed
+<br>
+<b>Resolution date</b>:
+2023-02-15
+<br>
+<b>Symptom</b>:
+Unexpected runtime behavior
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+import java.util.function.*;
+class Bar {}
+public class Test {
+    public static void main(String[] args) {
+      m(Bar::new);
+    }
+    static <X> void m(Function<String, X> d) {
+      d.apply("dfa")
+    }
+}
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Function reference, Single Abstract Method (SAM)
+
+<br>
+<br>
+</details>
+</li>
+<li>
+<b>
+#10 Issue in subtyping leads to unsound results 
 </b>
 
 <details>
@@ -195,7 +439,7 @@ class Test {
 </xmp>
 </pre>
 <b>Test Case Characteristics</b>:
-Parameterized class, Bounded type parameter, Inheritance, Subtyping
+Parameterized class, Bounded type parameter, Inheritance / Implementation of multiple interfaces, Subtyping
 
 <br>
 <br>
@@ -203,7 +447,7 @@ Parameterized class, Bounded type parameter, Inheritance, Subtyping
 </li>
 <li>
 <b>
-#5 STC involves improper subtyping rules for parameterized types with wildcard types 
+#11 STC involves improper subtyping rules for parameterized types with wildcard types 
 </b>
 
 <details>
@@ -234,7 +478,7 @@ class Test {
 </xmp>
 </pre>
 <b>Test Case Characteristics</b>:
-Parameterized class, Inheritance, Parameterized type, Use-site variance
+Parameterized class, Inheritance / Implementation of multiple interfaces, Parameterized type, Use-site variance
 
 <br>
 <br>
@@ -242,7 +486,7 @@ Parameterized class, Inheritance, Parameterized type, Use-site variance
 </li>
 <li>
 <b>
-#6 STC does not catch type error when assigning a type parameter to a variable of another type 
+#12 STC does not catch type error when assigning a type parameter to a variable of another type 
 </b>
 
 <details>
@@ -285,7 +529,7 @@ Parameterized function
 </li>
 <li>
 <b>
-#7 STC does not check the upper bounds of type parameters 
+#13 STC does not check the upper bounds of type parameters 
 </b>
 
 <details>
@@ -324,7 +568,7 @@ Parameterized class, Parameterized type, Bounded type parameter
 </li>
 <li>
 <b>
-#8 STC ignores declared type of variable 
+#14 STC ignores declared type of variable 
 </b>
 
 <details>
@@ -373,7 +617,7 @@ Subtyping
 </li>
 <li>
 <b>
-#9 STC misses type error when involving a variable with a char a declared type 
+#15 STC misses type error when involving a variable with a char a declared type 
 </b>
 
 <details>
@@ -411,7 +655,7 @@ Primitive type
 </li>
 <li>
 <b>
-#10 STC instantiates parameterized function with a wrong type leading to unsoundness  -- Fixed
+#16 STC instantiates parameterized function with a wrong type leading to unsoundness  -- Fixed
 </b>
 
 <details>
@@ -455,7 +699,7 @@ Parameterized function, Type argument inference
 </li>
 <li>
 <b>
-#11 STC fails to catch type error on the return type of lambdas  -- Fixed
+#17 STC fails to catch type error on the return type of lambdas  -- Fixed
 </b>
 
 <details>
@@ -502,7 +746,7 @@ Lambda, Function type
 </li>
 <li>
 <b>
-#12 STC infers a type that does not respect the bound of type variable 
+#18 STC infers a type that does not respect the bound of type variable 
 </b>
 
 <details>
@@ -560,7 +804,7 @@ class Main {
 </xmp>
 </pre>
 <b>Test Case Characteristics</b>:
-Parameterized class, Parameterized function, Bounded type parameter, Type argument inference, Inheritance, Subtyping
+Parameterized class, Parameterized function, Bounded type parameter, Type argument inference, Inheritance / Implementation of multiple interfaces, Subtyping
 
 <br>
 <br>
@@ -568,7 +812,7 @@ Parameterized class, Parameterized function, Bounded type parameter, Type argume
 </li>
 <li>
 <b>
-#13 Misleading report when using as a type argument a type parameter that extends an array type 
+#19 Misleading report when using as a type argument a type parameter that extends an array type 
 </b>
 
 <details>
@@ -597,7 +841,7 @@ class C<G extends B[]> extends A<G> {} // It works if G extends B
 </xmp>
 </pre>
 <b>Test Case Characteristics</b>:
-Parameterized class, Bounded type parameter, Inheritance, Array, Parameterized type
+Parameterized class, Bounded type parameter, Inheritance / Implementation of multiple interfaces, Array, Parameterized type
 
 <br>
 <br>
@@ -605,7 +849,7 @@ Parameterized class, Bounded type parameter, Inheritance, Array, Parameterized t
 </li>
 <li>
 <b>
-#14 STC misses type check in Generic class with a bounded type parameter 
+#20 STC misses type check in Generic class with a bounded type parameter 
 </b>
 
 <details>
@@ -645,7 +889,7 @@ class Foo<T extends A> {
 </xmp>
 </pre>
 <b>Test Case Characteristics</b>:
-Parameterized class, Parameterized type, Inheritance, Bounded type parameter
+Parameterized class, Parameterized type, Inheritance / Implementation of multiple interfaces, Bounded type parameter
 
 <br>
 <br>
@@ -653,7 +897,7 @@ Parameterized class, Parameterized type, Inheritance, Bounded type parameter
 </li>
 <li>
 <b>
-#15 STC: accepts incorrect program with flow typing 
+#21 STC: accepts incorrect program with flow typing 
 </b>
 
 <details>
@@ -699,7 +943,7 @@ class Bar extends Foo {
 </xmp>
 </pre>
 <b>Test Case Characteristics</b>:
-Flow typing, Subtyping, Conditionals, Inheritance
+Flow typing, Subtyping, Conditionals, Inheritance / Implementation of multiple interfaces
 
 <br>
 <br>
@@ -707,7 +951,7 @@ Flow typing, Subtyping, Conditionals, Inheritance
 </li>
 <li>
 <b>
-#16 Wrong LUB when involving a numeric constant and null 
+#22 Wrong LUB when involving a numeric constant and null 
 </b>
 
 <details>
@@ -749,7 +993,7 @@ Conditionals, Primitive type
 </li>
 <li>
 <b>
-#17 STC misses type checks on default arguments  -- Fixed
+#23 STC misses type checks on default arguments  -- Fixed
 </b>
 
 <details>
@@ -804,7 +1048,7 @@ Named arguments
 </li>
 <li>
 <b>
-#18 Compiler crash when trying to cast a boolean to float variable  -- Fixed
+#24 Compiler crash when trying to cast a boolean to float variable  -- Fixed
 </b>
 
 <details>
@@ -847,7 +1091,7 @@ Primitive type
 </li>
 <li>
 <b>
-#19 Type checking of array initializer expressions  -- Fixed
+#25 Type checking of array initializer expressions  -- Fixed
 </b>
 
 <details>
@@ -898,7 +1142,7 @@ Array
 </li>
 <li>
 <b>
-#20 CLONE - STC does not report type mismatches for coerced list expression 
+#26 CLONE - STC does not report type mismatches for coerced list expression 
 </b>
 
 <details>
@@ -937,7 +1181,7 @@ Array, Cast
 </li>
 <li>
 <b>
-#21 STC does not report type mismatches in array initializers  -- Fixed
+#27 STC does not report type mismatches in array initializers  -- Fixed
 </b>
 
 <details>
@@ -991,7 +1235,7 @@ Array
 </li>
 <li>
 <b>
-#22 STC fails to report missing constructor 
+#28 STC fails to report missing constructor 
 </b>
 
 <details>
@@ -1028,7 +1272,7 @@ public class Main {
 </xmp>
 </pre>
 <b>Test Case Characteristics</b>:
-Inheritance
+Inheritance / Implementation of multiple interfaces
 
 <br>
 <br>
@@ -1036,7 +1280,7 @@ Inheritance
 </li>
 <li>
 <b>
-#23 STC does not correctly type check variable whose type is a type variable 
+#29 STC does not correctly type check variable whose type is a type variable 
 </b>
 
 <details>
@@ -1085,7 +1329,7 @@ Parameterized class, Parameterized type
 </li>
 <li>
 <b>
-#24 internal compiler error during instruction selection 
+#30 internal compiler error during instruction selection 
 </b>
 
 <details>
@@ -1122,12 +1366,186 @@ class Foo {
 </li>
 </ul>
 
+<h3>Scala</h3>
+
+<ul>
+<li>
+<b>
+#31 AssertionError: failed to resolve inner class 
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://github.com/lampepfl/dotty/issues/17531">https://github.com/lampepfl/dotty/issues/17531</a>
+<br>
+<b>Date found</b>:
+2023-05-17
+<br>
+<b>Status</b>:
+Closed
+<br>
+<b>Resolution</b>:
+Not an Issue
+
+<br>
+<b>Symptom</b>:
+Crash
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+Scala
+import org.apache.logging.log4j.core.message._
+def test(): Unit = {
+  val x: ExtendedThreadInfoFactory = ???
+}
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Inner class
+
+<br>
+<br>
+</details>
+</li>
+</ul>
+
+<h3>Kotlin</h3>
+
+<ul>
+<li>
+<b>
+#32 Superfluous TYPE_MISMATCH when instantiating type constructor with bounded type parameters 
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://youtrack.jetbrains.com/issue/KT-47458">https://youtrack.jetbrains.com/issue/KT-47458</a>
+<br>
+<b>Date found</b>:
+2021-06-25
+<br>
+<b>Status</b>:
+Open
+
+
+<br>
+<b>Symptom</b>:
+Unexpected runtime behavior
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+class Foo<out Y, Z: Y>
+open class A
+class B : A()
+fun main() {
+    val x: Foo<A, in A> = Foo<B, B>()
+}
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Parameterized class, Declaration-site variance, Bounded type parameter, Use-site variance, Parameterized type, Inheritance / Implementation of multiple interfaces
+
+<br>
+<br>
+</details>
+</li>
+<li>
+<b>
+#33 NI: Reporting misleading error message when initializing a type constructor with unresolved reference 
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://youtrack.jetbrains.com/issue/KT-47117">https://youtrack.jetbrains.com/issue/KT-47117</a>
+<br>
+<b>Date found</b>:
+2021-06-03
+<br>
+<b>Status</b>:
+Open
+
+
+<br>
+<b>Symptom</b>:
+Unexpected runtime behavior
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+class Foo<J>() {}
+class Bar<H, N>(val x: Foo<N>) {}
+fun foo(): Unit
+{
+  val y = Bar<Any, Any>(Foo<N>())
+}
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Parameterized class, Parameterized type
+
+<br>
+<br>
+</details>
+</li>
+<li>
+<b>
+#34 IllegalArgumentException: ClassicTypeSystemContext couldn't handle: Captured(out Number)  -- Fixed
+</b>
+
+<details>
+<br>
+<b>Link</b>:
+<a href="https://youtrack.jetbrains.com/issue/KT-49101">https://youtrack.jetbrains.com/issue/KT-49101</a>
+<br>
+<b>Date found</b>:
+2021-10-06
+<br>
+<b>Status</b>:
+Closed
+<br>
+<b>Resolution</b>:
+Fixed
+<br>
+<b>Resolution date</b>:
+2021-10-20
+<br>
+<b>Symptom</b>:
+Crash
+<br>
+<b>Test case</b>:
+<pre>
+<xmp>
+class A<T: B<out Number>>(val x: T) {
+    fun test() {
+      val y: Int = x.m<C<out Number>>()
+    }
+}
+class B<T1> {
+    fun <X1: C<T1>> m(): Int = 1
+}
+class C<T>
+</xmp>
+</pre>
+<b>Test Case Characteristics</b>:
+Parameterized class, Bounded type parameter, Use-site variance, Parameterized type, Parameterized function, Type argument inference
+
+<br>
+<br>
+</details>
+</li>
+</ul>
+
 <h3>Java</h3>
 
 <ul>
 <li>
 <b>
-#25 NPE at at jdk.compiler/com.sun.tools.javac.jvm.Code.emitop  -- Fixed
+#35 NPE at at jdk.compiler/com.sun.tools.javac.jvm.Code.emitop  -- Fixed
 </b>
 
 <details>
